# beta-recsys

./: .gitignore  .isort.cfg  Docker Support.md  Dockerfile  LICENSE  MANIFEST.in  Makefile  README.md  ci-requirements.txt  codecov.yml  environment.yml  formatting_check.sh  gen_doc.sh  generate_yelp_dataset.py  onedrive.py  requirements.txt  setup.cfg  setup.py  test_download_tips.py
beta_rec/: __init__.py  eval_engine.py  train_engine.py  train_nmf.py  train_vbcar.py
configs/: NGCF_default.json  buir_default.json  cmn_default.json  itemKNN_default.json  lcfn_default.json  lightgcn_default.json  mf_default.json  mixgcf_default.json  multi_VAE_default.json  narm_default.json  ncf_default.json  neumf_default.json  ngcf_default.json  sasrec_default.json  sgl_default.json  simgcl_default.json  tisasrec_default.json  triple2vec_default.json  tvbr_default.json  ultragcn_default.json  vaecf_default.json  vbcar_default.json
contribute/: models.md
docs/: conf.py  index.rst  modules.rst
examples/: MF_API_test.ipynb  SASRec_dunnhumby.ipynb  SASRec_instacart.ipynb  SASRec_instacart_25.ipynb  SASRec_tafeng.ipynb  SASRec_test.ipynb  TiSASRec_Movielens.ipynb  __init__.py  experiment.ipynb  train_NGCF.py  train_buir.py  train_cmn.py  train_cornac.py  train_lcfn.py  train_lightgcn.py  train_mf.py  train_mf2020.py  train_mixgcf.py  train_narm.py  train_ncf.py  train_ngcf.py  train_nmf.py  train_sgl.py  train_simgcl.py  train_triple2vec.py  train_tvbr.py  train_ultragcn.py  train_vaecf.py  train_vbcar.py  tvbr_dunnhumby.ipynb  vbcar_dunnhumby.ipynb
hack/: Dockerfile  (+1 more)
(+200 files in other folders)
