[metadata]
description-file = README.md

[aliases]
test=pytest

[tool:pytest]
addopts = --capture=no --cov

[isort]
line_length=88
indent='    '
multi_line_output=3
default_section=FIRSTPARTY
no_lines_before=LOCALFOLDER
sections=FUTURE,STDLIB,FIRSTPARTY,THIRDPARTY,LOCALFOLDER
include_trailing_comma=true
use_parentheses=true

[flake8]
ignore=E402,W503,W504,E203,C901,I001,I003,I004
