[metadata]
description-file = README.md

[aliases]
test=pytest

[tool:pytest]
addopts = --capture=no --cov

[isort]
line_length=88
indent='    '
multi_line_output=3
include_trailing_comma=true
use_parentheses=true
force_grid_wrap=0

[flake8]
ignore=E402,W503,W504,E203,C901,I001,I003,I004
